Beginner and Recommended fields added

--- a/src/app/AdminModule/admin/admin.component.html
+++ b/src/app/AdminModule/admin/admin.component.html
@@ -30,6 +30,14 @@
       <label for="exampleInputPassword1" class="form-label" >Price</label>
       <input type="text" class="form-control" id="exampleInputPassword1" name="price" ngModel>
     </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1" name="product_beginner" ngModel>
+      <label class="form-check-label" for="exampleCheck1">Beginner</label>
+    </div>
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1" name="product_recommended" ngModel>
+      <label class="form-check-label" for="exampleCheck1">Recommended</label>
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
